# mozart

./: .gitignore  README.md  dogsheep.yml  makefile  metadata.yml  pyproject.toml  tailwind.config.js
templates/: base.html
ui/styles/: main.css
ui/templates/: base.html  beta.html
